<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OptionMenuSample</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="item3">item3</string>
    <string name="subitem1">電話</string>
    <string name="subitem2">メール</string>

</resources>